--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
-
     background-color: #b3c7f7;
     /* background-color: #d9e4ff; */
     color: black;
+    margin-left: 5px;
 }
 
+/* HEADING STYLING */
 h1 {
     font-family: 'Times New Roman', Times, serif;
     color: black;
@@ -32,20 +33,35 @@ img {
     border-top-right-radius: 30px;
 }
 
+/* NAVIGATION STYLING */
 nav {
-    text-align: center;
+    margin: 10px;
+    /* border: 2px solid black; */
+    padding: 5px;
 }
 
+li {
+    display: inline-block;
+    margin-left: 50px;
+    height: 20px;
+}
+
+/* LINK STYLING */
 a {
     text-decoration: none;
     color: black;
-    font-size: large;
+    font-size: large;   
+}
+
+#skipToMain {
+    text-transform: uppercase;
 }
 
 a:hover {
     color: gray;
 }
 
+/* PARAGRAPH STYLING */
 p {
     line-height: 32px;  
 }
